Add images about, upd text for testimonials

--- a/about.html
+++ b/about.html
@@ -75,13 +75,13 @@
             <div class="container">
                 <div class="row top-cont-grid align-items-center">
                     <div class="col-lg-6 left-img pr-lg-4">
-                        <img src="assets/images/about3.jpg" alt="" class="img-responsive img-fluid" />
+                        <img src="assets/images/about3.png" alt="" class="img-responsive img-fluid" />
                         <div class="row mt-3">
                             <div class="col-6 img-pad">
-                                <img src="assets/images/about4.jpg" alt="" class="img-responsive img-fluid" />
+                                <img src="assets/images/about4.png" alt="" class="img-responsive img-fluid" />
                             </div>
                             <div class="col-6 img-pad-2">
-                                <img src="assets/images/about5.jpg" alt="" class="img-responsive img-fluid" />
+                                <img src="assets/images/about5.png" alt="" class="img-responsive img-fluid" />
                             </div>
                         </div>
                     </div>
@@ -260,19 +260,27 @@
                     <div class="item">
                         <div class="testimonial-content">
                             <div class="testimonial">
-                                <a class="comment-img" href="#url"><img src="assets/images/testi1.jpg"
+                                <a class="comment-img" href="#url"><img src="assets/images/testi1.png"
                                         class="img-responsive" alt="placeholder image"></a>
                                 <blockquote>
-                                    <q>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</q>
+                                    <q>En Qué Creemos</q>
                                 </blockquote>
-                                <p class="text-black">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                                            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-                                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 
-                                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                                <p class="text-black">En prodigio creemos que cada éxito merece ser
+                                    celebrado con la máxima distinción. Nos esforzamos
+                                    por ofrecer productos y servicios que superan las
+                                    expectativas, estableciendo la excelencia como
+                                    nuestro estándar. La creatividad es un pilar
+                                    fundamental para nosotros, así que transformamos
+                                    cada visita en una experiencia única y artística.
+                                <br>
+                                    Nos mantenemos a la vanguardia a través de la
+                                    innovación constante, y aunque valoramos la
+                                    tradición, también abrazamos un enfoque moderno
+                                    que nos permite brindar lo mejor de ambos mundos.
+                                </p>
                                 <div class="text-center mt-5">
                                     <div class="people-info align-self">
-                                        <h3>Usuario</h3>
+                                        <h3>Prodigio</h3>
                                     </div>
                                 </div>
                             </div>
@@ -281,61 +289,21 @@
                     <div class="item">
                         <div class="testimonial-content">
                             <div class="testimonial">
-                                <a class="comment-img" href="#url"><img src="assets/images/testi1.jpg"
+                                <a class="comment-img" href="#url"><img src="assets/images/testi1.png"
                                         class="img-responsive" alt="placeholder image"></a>
                                 <blockquote>
-                                    <q>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</q>
+                                    <q>Arquetipo: LA PATRONA</q>
                                 </blockquote>
-                                <p class="text-black">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                                            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-                                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 
-                                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                                <p class="text-black">Prodigio adopta el arquetipo de la Patrona a través de su
+                                    enfoque en la excelencia, el ambiente sofisticado, el
+                                    servicio personalizado, las experiencias exclusivas, el
+                                    diseño visual y la calidad de sus productos. Estos
+                                    elementos trabajan juntos para crear una marca que
+                                    refleja poder y liderazgo, atrayendo a una clientela que
+                                    valora los detalles, el buen servicio y la creatividad.</p>
                                 <div class="text-center mt-5">
                                     <div class="people-info align-self">
-                                        <h3>Usuario</h3>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimonial-content">
-                            <div class="testimonial">
-                                <a class="comment-img" href="#url"><img src="assets/images/testi1.jpg"
-                                        class="img-responsive" alt="placeholder image"></a>
-                                <blockquote>
-                                    <q>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</q>
-                                </blockquote>
-                                <p class="text-black">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                                            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-                                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 
-                                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-                                <div class="text-center mt-5">
-                                    <div class="people-info align-self">
-                                        <h3>Usuario</h3>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimonial-content">
-                            <div class="testimonial">
-                                <a class="comment-img" href="#url"><img src="assets/images/testi1.jpg"
-                                        class="img-responsive" alt="placeholder image"></a>
-                                <blockquote>
-                                    <q>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</q>
-                                </blockquote>
-                                <p class="text-black">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                                            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-                                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 
-                                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-                                <div class="text-center mt-5">
-                                    <div class="people-info align-self">
-                                        <h3>Usuario</h3>
+                                        <h3>Prodigio</h3>
                                     </div>
                                 </div>
                             </div>
