upd metadata to SEO

--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:title" content="Prodigio Gastro Bar | Manizales">
+    <meta property="og:description" content="Experimenta las mejores sensaciones con nuestra cocina y nuestros cocteles de autor. ¡Reserva hoy mismo!">
+    <meta property="og:image" content="https://prodigiogastrobar.com/assets/images/inner-banner.png">
+    <meta property="og:url" content="https://prodigiogastrobar.com/">
+    <meta name="description" content="Experimenta las mejores sensaciones con nuestra cocina y nuestros cocteles de autor. ¡Reserva hoy mismo!">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="canonical" href="https://prodigiogastrobar.com">
     <title>Prodigio Gastro Bar</title>
     <!-- google-fonts -->
     <link href="//fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap"
@@ -13,6 +19,23 @@
     <!-- //google-fonts -->
     <!-- Template CSS Style link -->
     <link rel="stylesheet" href="assets/css/style-liberty.css">
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "url": "https://prodigiogastrobar.com",
+          "name": "Prodigio Gastro Bar",
+          "description": "Ofrecemos experiencias culinarias únicas, con alta coctelería y una fusión gastronómica de primer nivel.",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://prodigiogastrobar.com/assets/images/Logo.svg",
+            "width": 300,
+            "height": 300
+          }
+        }
+    </script>
+
 </head>
 
 <body>
