--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:title" content="Prodigio Gastro Bar | Manizales">
+    <meta property="og:description" content="Contáctanos">
+    <meta property="og:image" content="https://prodigiogastrobar.com/assets/images/inner-banner.png">
+    <meta property="og:url" content="https://prodigiogastrobar.com/contact.html">
+    <meta name="description" content="Experimenta las mejores sensaciones con nuestra cocina y nuestros cocteles de autor. ¡Reserva hoy mismo!">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <title>Prodigio Gastro Bar - Contactanos</title>
     <!-- google-fonts -->
